[tool.poetry]
name = "yaramanager"
version = "0.1.0"
description = "CLI tool to manage your yara rules"
authors = ["3c7 <3c7@posteo.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.2"
plyara = "^2.1.1"
yarabuilder = "^0.0.4"
rich = "^9.13.0"
alembic = "^1.5.8"
click = "^7.1.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yaramanager = "yaramanager.commands.cli:cli"
ym = "yaramanager.commands.cli:cli"
